@@ -1,6 +1,8 @@
 # Regression test specification for the z80 target running with uCsim
 #
 
+CC_FOR_BUILD = $(CC)
+
 # path to uCsim
 ifdef SDCC_BIN_PATH
   UCZ80 = $(SDCC_BIN_PATH)/sz80$(EXEEXT)
@@ -14,8 +16,10 @@ else
 
   AS_Z80 = $(top_builddir)/bin/sdasz80$(EXEEXT)
 
+ifndef CROSSCOMPILING
   SDCCFLAGS += --nostdinc -I$(top_srcdir)
   LINKFLAGS += --nostdlib -L$(top_builddir)/device/lib/build/z80
+endif
 endif
 
 SDCCFLAGS +=-mz80 --less-pedantic --profile -DREENTRANT=
@@ -47,14 +51,14 @@ $(PORT_CASES_DIR)/%$(OBJEXT): fwk/lib/%.c
 	$(SDCC) $(SDCCFLAGS) -c $< -o $@
 
 # run simulator with 10 seconds timeout
-%.out: %$(BINEXT) $(CASES_DIR)/timeout$(EXEEXT)
+%.out: %$(BINEXT) $(CASES_DIR)/timeout
 	mkdir -p $(dir $@)
 	-$(CASES_DIR)/timeout 10 $(UCZ80) $< < $(PORTS_DIR)/$(PORT)/uCsim.cmd > $@ \
 	  || echo -e --- FAIL: \"timeout, simulation killed\" in $(<:$(BINEXT)=.c)"\n"--- Summary: 1/1/1: timeout >> $@
 	python $(srcdir)/get_ticks.py < $@ >> $@
 	-grep -n FAIL $@ /dev/null || true
 
-$(CASES_DIR)/timeout$(EXEEXT): fwk/lib/timeout.c
-	$(CC) $(CFLAGS) $< -o $@
+$(CASES_DIR)/timeout: fwk/lib/timeout.c
+	$(CC_FOR_BUILD) $(CFLAGS) $< -o $@
 
 _clean:
