@@ -1,3 +1,12 @@
+2010-07-05 Borut Razem <borut.razem AT siol.net>
+	* support/regression/ports/pic14/spec.mk,
+	  support/regression/ports/pic16/spec.mk,
+	  support/regression/ports/ds390/spec.mk,
+	  support/regression/ports/hc08/spec.mk,
+	  support/regression/ports/ucz80/spec.mk,
+	  support/regression/ports/mcs51-common/spec.mk:
+	  mingw build cross reggression testing with wine
+
 2010-07-03 Philipp Klaus Krause <pkk AT spth.de>
 	* support/scripts/sdcc.nsi: removed unix2dos conversion
 
